2015-04-12 Pierre Wieser <pwieser@trychlos.org>

	* src/ui/ofa-irenderable.c: fix end-of-page position computing.

	* src/ui/ofa-iaccounts-filter.c: fix 'To:' account label display.

	* src/ui/ofa-irenderable.c,
	* src/ui/ofa-irenderable.h:
	- define new want_groups() interface method
	- reset sIRenderable data on begin_render(), freeing on end_render().

	* src/ui/ofa-render-balances-page.c: updated accordingly.

	* src/ui/ofa-render-balances-bin.ui,
	* src/ui/ofa-render-balances-page.c,
	* src/ui/ofa-render-books-bin.ui,
	* src/ui/ofa-render-books-page.c: fix minor typos.

	* src/ui/ofa-ledger-treeview.c,
	* src/ui/ofa-ledger-treeview.h: new ofa_ledger_treeview_set_hexpand() method.

	* src/ui/ofa-pdf-books.c,
	* src/ui/ofa-pdf-books.h,
	* src/ui/ofa-print-books.ui: removed files.

	* src/ui/ofa-render-books-bin.c,
	* src/ui/ofa-render-books-bin.h,
	* src/ui/ofa-render-books-bin.ui: new ofaRenderBooksBin class.

	* src/ui/ofa-render-books-page.c,
	* src/ui/ofa-render-books-page.h: new ofaRenderBooksPage class. 

	* src/ui/Makefile.am,
	* src/ui/ofa-main-window.c: updated accordingly.

	* src/ui/ofa-render-balances-page.c: remove useless include.

	* src/ui/ofa-irenderable.c,
	* src/ui/ofa-irenderable.h: new ofa_irenderable_is_paginating() method.

	* src/ui/ofa-iprintable2.c: GtkPrintSettings doesn't handle page setup.

	* src/ui/ofa-idates-filter.c: fix myEditableDate initialization.

	* src/ui/ofa-accounts-filter-vv-bin.c,
	* src/ui/ofa-accounts-filter-vv-bin.h,
	* src/ui/ofa-accounts-filter-vv-bin.ui: new ofaAccountsFilterVVBin class.

	* src/ui/ofa-iaccounts-filter.c,
	* src/ui/ofa-iaccounts-filter.h: new ofaIAccountsFilter interface.

	* src/ui/Makefile.am,
	* src/ui/ofa-render-balances-bin.c,
	* src/ui/ofa-render-balances-bin.h,
	* src/ui/ofa-render-balances-bin.ui,
	* src/ui/ofa-render-balances-page.c: updated accordingly.

2015-04-11 Pierre Wieser <pwieser@trychlos.org>

	* src/api/ofa-settings.h,