@@ -1,5 +1,9 @@
 2015-04-12 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/ui/ofa-dos-menubar.ui: review menu items order and labels.
+
+	* src/ui/ofa-render-books-page.c: use want_groups() method.
+
 	* src/ui/ofa-irenderable.c: fix end-of-page position computing.
 
 	* src/ui/ofa-iaccounts-filter.c: fix 'To:' account label display.
